--- a/styles.css
+++ b/styles.css
@@ -434,3 +434,13 @@ fieldset.form-group legend {
     margin: 6px 0;
   }
 }
+
+/* estilos para la validacion del form */
+
+.formulario__grupo-incorrecto .formulario__label {
+  color:red;
+}
+
+.formulario__grupo-incorrecto .formulario__input {
+  border: 3px solid red;
+}
